Fixed spacing issues for some devices/browsers

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ img {
 }
 
 body {
-    height: 100%;
+    max-height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: clamp(1rem, 0.9063rem + 0.4167vw, 1.125rem);
     font-weight: 400;
@@ -261,6 +261,9 @@ button {
     .site-title {
         padding-bottom: .25em;
     }
+    .form * {
+        margin-bottom: var(--gap-sm);
+    }
     input[type=text],
     button,
     .form > p {
@@ -272,10 +275,10 @@ button {
     .form {
         flex-basis: 100vh;
         height: 100%;
+        margin-bottom: 0;
     }
     .hero *,
     .form * {
-        margin-bottom: 0;
         padding: 0;
     }
     .form-title,
@@ -292,7 +295,7 @@ button {
         padding: 1em;
     }
 }
-@media (min-width: 570px) and (max-width: 765px) and (orientation: landscape) {
+@media (min-width: 600px) and (max-width: 765px) and (orientation: landscape) {
     .desktop-flex {
         display: flex;
         flex-direction: row;
@@ -302,5 +305,11 @@ button {
     .hero,
     .form {
         flex: 1 1 50%;
+        margin-bottom: 0;
     }
+    .hero *,
+    .form * {
+        padding: 0;
+    }
+
 }
